--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,12 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Configure Docker daemon
+      run: |
+        echo '{ "insecure-registries": ["${{ secrets.DOCKER_REGISTRY_URL }}"] }' | sudo tee /etc/docker/daemon.json
+
+        sudo systemctl restart docker
+
     - name: Login to Docker Registry
       run: docker login ${{ secrets.DOCKER_REGISTRY_URL }} -u ${{ secrets.DOCKER_REGISTRY_USERNAME }} -p ${{ secrets.DOCKER_REGISTRY_PASSWORD }} --password-stdin
 
