--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,12 @@ jobs:
       run: docker login ${{ secrets.DOCKER_REGISTRY_URL }} -u ${{ secrets.DOCKER_REGISTRY_USERNAME }} -p ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
 
     - name: Build and Push Docker Image
-      run: |
-        docker build -t ${{ secrets.DOCKER_REGISTRY_URL }}/picturemapping:latest --context . .
-        docker push ${{ secrets.DOCKER_REGISTRY_URL }}/picturemapping:latest
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: |
+          docker build -t ${{ secrets.DOCKER_REGISTRY_URL }}/backend:${{github.sha}}
+          docker push ${{ secrets.DOCKER_REGISTRY_URL }}/backend:latest
 
       
