--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,9 @@ jobs:
       run: docker login ${{ secrets.DOCKER_REGISTRY_URL }} -u ${{ secrets.DOCKER_REGISTRY_USERNAME }} -p ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
 
     - name: Working Directory
-      run:
-        ls -al
-        pwd
+      run: |
+          ls -al
+          pwd
     - name: Build and Push Docker Image
       run: |
         docker build -t ${{ secrets.DOCKER_REGISTRY_URL }}/picturemapping:latest .
