--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,24 @@ jobs:
     # PR이 머지된 경우에만 실행
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
+    env:
+      DATABASE_HOST: ${{ secrets.DATABASE_HOST }}
+      DATABASE_NAME: ${{ secrets.DATABASE_NAME }}
+      DATABASE_USERNAME: ${{ secrets.DATABASE_USERNAME }}
+      DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+    - name: Build with Gradle
+      run: ./gradlew clean build -PDATABASE_HOST=${{ secrets.DATABASE_HOST }} -PDATABASE_NAME=${{ secrets.DATABASE_NAME }} -PDATABASE_USERNAME=${{ secrets.DATABASE_USERNAME }} -PDATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }}
+
 
     - name: Configure Docker daemon
       run: |
@@ -31,7 +45,7 @@ jobs:
 
     - name: Build and Push Docker Image
       run: |
-        docker build -t ${{ secrets.DOCKER_REGISTRY_URL }}/picturemapping:latest .
-        docker push ${{ secrets.DOCKER_REGISTRY_URL }}/picturemapping:latest
+        docker build -t ${{ secrets.DOCKER_REGISTRY_URL }}/picturemapping .
+        docker push ${{ secrets.DOCKER_REGISTRY_URL }}/picturemapping
 
       
