--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,9 @@ jobs:
     - name: List directory contents
       run: ls -la
 
+    - name: List contents of build/libs
+      run: ls -la ./build/libs/
+
     - name: Build and Push Docker Image
       run: |
         docker build -t ${{ secrets.DOCKER_REGISTRY_URL }}/picturemapping .
