--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
 
     - name: Build and Push Docker Image
       run: |
-        docker build -t ${{ secrets.DOCKER_REGISTRY_URL }}/picturemapping .
+        docker build -t ${{ secrets.DOCKER_REGISTRY_URL }}/picturemapping/backend .
         docker push ${{ secrets.DOCKER_REGISTRY_URL }}/picturemapping/backend
 
       
