--- a/deploy/deployment.yml
+++ b/deploy/deployment.yml
@@ -15,8 +15,8 @@ spec:
       nodeSelector: # nodeSelector 추가
         kubernetes.io/hostname: backend  # 원하는 노드 이름 지정
       containers:
-        - name: backend-pod
-          image: ${{ secrets.DOCKER_REGISTRY_URL }}/picturemapping/backend
+        - name: backend
+          image: ${{ secrets.DOCKER_REGISTRY_URL }}/backend/${{ github.sha }}
           ports:
             - containerPort: 8080
 ---
