--- a/deploy/deployment.yml
+++ b/deploy/deployment.yml
@@ -16,7 +16,7 @@ spec:
         kubernetes.io/hostname: backend  # 원하는 노드 이름 지정
       containers:
         - name: backend
-          image: ${{ secrets.DOCKER_REGISTRY_URL }}/backend/${{ github.sha }}
+          image: ${{ secrets.DOCKER_REGISTRY_URL }}/backend:${{ github.sha }}
           ports:
             - containerPort: 8080
 ---
