--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,5 +55,8 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_REGISTRY_URL }}/backend:${{ github.sha }}
+        tags: |
+          ${{ secrets.DOCKER_REGISTRY_URL }}.backend:${{ github.sha }}
+          ${{ secrets.DOCKER_REGISTRY_URL }}.backend:latest
+
       
