--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
         context: .
         push: true
         tags: |
-          ${{ secrets.DOCKER_REGISTRY_URL }}.backend:${{ github.sha }}
-          ${{ secrets.DOCKER_REGISTRY_URL }}.backend:latest
+          ${{ secrets.DOCKER_REGISTRY_URL }}/backend:${{ github.sha }}
+          ${{ secrets.DOCKER_REGISTRY_URL }}/backend:latest
 
       
