--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,9 +78,9 @@ jobs:
       - name: Update image in Kubernetes manifest
         run: |
           IMAGE_DIGEST=$(cat image-digest.txt)
-          echo $IMAGE_DIGEST
+          cat $IMAGE_DIGEST
           # sed -i "s|image: ${{ secrets.DOCKER_REGISTRY_URL }}/backend@sha256:[a-zA-Z0-9]*|image: ${{ secrets.DOCKER_REGISTRY_URL }}/backend@$IMAGE_DIGEST|g" deploy/deployment.yml
-          cat deploy/deployment.yml
+          # cat deploy/deployment.yml
       - name: Commit and push changes
         run: |
           git config --local user.email "tkd8973@gmail.com"
