--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,7 +79,7 @@ jobs:
       - name: Update image in Kubernetes manifest
         run: |
           IMAGE_DIGEST=$(cat image-digest.txt)
-          sed -i "s|image: ${{ secrets.DOCKER_REGISTRY_URL }}/backend:[a-zA-Z0-9]*|image: ${{ secrets.DOCKER_REGISTRY_URL }}/backend:${{ github.sha }}|g" deploy/deployment.yml
+          sed -i "s|image: ${{ secrets.DOCKER_REGISTRY_URL }}/backend:.*|image: ${{ secrets.DOCKER_REGISTRY_URL }}/backend:${{ github.sha }}|g" deploy/deployment.yml
           cat deploy/deployment.yml
           pwd
           
@@ -87,7 +87,7 @@ jobs:
         run: |
           git config --local user.email "tkd8973@gmail.com"
           git config --local user.name "tkd8973"
-          git add deploy/deployment.yml
+          git add .
           git commit -m "Update image in Kubernetes manifest"
           git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/tkd8973/PICMAP_BACKEND.git HEAD:main
         env:
