--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,6 +88,6 @@ jobs:
           git config --local user.name "tkd8973"
           git add deploy/deployment.yml
           git commit -m "Update image in Kubernetes manifest"
-          git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/tkd8973/PICMAP_BACKEND.git HEAD:main
+          git push git@github.com:tkd8973/PICMAP_BACKEND.git HEAD:main
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
