--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,11 +83,11 @@ jobs:
           pwd
           
       - name: Commit and push changes
+        env:
+          GH_TOKEN : ${{ secrets.GH_TOKEN }}
         run: |
           git config --local user.email "tkd8973@gmail.com"
           git config --local user.name "tkd8973"
           git add deploy/deployment.yml
           git commit -m "Update image in Kubernetes manifest"
-          git push git@github.com:tkd8973/PICMAP_BACKEND.git HEAD:main
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/tkd8973//PICMAP_BACKEND.git HEAD:main
